[tool.poetry]
name = "visabot"
version = "0.1.0"
description = "Python Discord Bot for auto kicking new people if they are not given a visa"
authors = ["Bernoulli"]
package-mode = false
requires-poetry = ">=2.0.0"
# developed against 2.1.3

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.1.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"